--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>becauseofprog</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>BecauseOfProg</title>
+  <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet" />
+  <meta property="og:url" content="https://becauseofprog.fr" />
+  <meta property="og:title" content="BecauseOfProg" />
+  <meta property="og:description" content="Actualités et tutoriels sur le numérique et la programmation." />
+  <link rel="icon" href="https://cdn.becauseofprog.fr/logos/bop-transparent.png" />
+  <meta name="theme-color" content="#b71c1c">
+</head>
+
+<body>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
