🐛 fix(*): fix all bugs due to upgrade
Fixing all bugs from the vue-cli upgrade to version 3, including icons, PWA and config.

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
   <title>BecauseOfProg</title>
 
-  <link rel="icon" href="https://cdn.becauseofprog.fr/logos/bop-transparent.png" />
+  <link rel="icon" href="/img/icon.png" />
   <meta name="theme-color" content="#b71c1c">
 </head>
 
