--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,33 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>blog-4.0.0</title>
+
+    <meta name="apple-mobile-web-app-title" content="BecauseOfProg">
+    <meta name="application-name" content="BecauseOfProg">
+    <meta name="msapplication-TileColor" content="#ff514c">
+    <meta name="theme-color" content="#ff514c">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
+    <link rel="me" href="https://twitter.com/BecauseOfProg">
+
+    <link rel="manifest" href="/manifest.json">
+
+    <meta property="og:locale" content="fr_fr">
+    <meta name="twitter:creator" content="@BecauseOfProg">
+
+    <link rel="alternate" type="application/atom+xml" title="BecauseOfprog - Tout le site" href="/tout.rss"/>
+    <link rel="search" type="application/opensearchdescription+xml" title="BecauseOfprog - Blog"
+          href="/static/opensearch.xml"/>
+    <link rel="shortcut icon" href="https://cdn.becauseofprog.fr/v2/sites/becauseofprog.fr/assets/logos/favicon.ico">
+
+    <meta name="twitter:card" content="summary">
+    <meta property="og:type" content="website">
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but blog-4.0.0 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>Merci d'activer JavaScript afin d'utiliser notre site.</strong>
+      <p>Pour toute réclamation, contactez-nous via <a href="https://twitter.com/BecauseOfProg">notre Twitter</a>.</p>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
