style: apply a "lecture" style with adapted fonts for reading

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     <link rel="search" type="application/opensearchdescription+xml" title="BecauseOfprog - Blog"
           href="/static/opensearch.xml"/>
     <link rel="shortcut icon" href="https://cdn.becauseofprog.fr/v2/sites/becauseofprog.fr/assets/logos/favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600&family=Merriweather:ital,wght@0,300;0,700;1,400&display=swap" rel="stylesheet">
 
     <meta name="twitter:card" content="summary">
     <meta property="og:type" content="website">
