fix: fix manifest and default metas

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,14 @@
 
     <meta name="twitter:card" content="summary">
     <meta property="og:type" content="website">
+
+    <meta name="twitter:card" content="summary">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://becauseofprog.fr">
+    <meta property="og:title" content="BecauseOfProg">
+    <meta property="og:description" content="Blog d'actualités sur l'informatique et le numérique">
+    <meta property="og:image" content="https://cdn.becauseofprog.fr/logos/bop-transparent.png">
+    <meta name="author" content="BecauseOfProg">
   </head>
   <body>
     <noscript>
