feat: add article creation (for staff)

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,9 @@
     <meta property="og:description" content="Blog d'actualités sur l'informatique et le numérique">
     <meta property="og:image" content="https://cdn.becauseofprog.fr/logos/bop-transparent.png">
     <meta name="author" content="BecauseOfProg">
+
+    <link rel="stylesheet" href="https://cdn.becauseofprog.fr/v2/libs/simplemde/simplemde.min.css">
+    <script src="https://cdn.becauseofprog.fr/v2/libs/simplemde/simplemde.min.js"></script>
   </head>
   <body>
     <noscript>
