--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name='viewport' content='initial-scale=1, viewport-fit=cover'>
+    <meta name="viewport" content='initial-scale=1, viewport-fit=cover'>
 
     <meta name="apple-mobile-web-app-title" content="BecauseOfProg">
     <meta name="application-name" content="BecauseOfProg">
@@ -30,11 +30,6 @@
 
     <meta name="twitter:card" content="summary">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://becauseofprog.fr">
-    <meta property="og:title" content="BecauseOfProg">
-    <meta property="og:description" content="Blog d'actualités sur l'informatique et le numérique">
-    <meta property="og:image" content="https://cdn.becauseofprog.fr/logos/bop-transparent.png">
-    <meta name="author" content="BecauseOfProg">
 
     <link rel="stylesheet" href="https://cdn.becauseofprog.fr/v2/libs/simplemde/simplemde.min.css">
     <script src="https://cdn.becauseofprog.fr/v2/libs/simplemde/simplemde.min.js"></script>
