--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,18 @@
     <link rel="alternate" type="application/atom+xml" title="BecauseOfprog - Tout le site" href="/tout.rss"/>
     <link rel="search" type="application/opensearchdescription+xml" title="BecauseOfprog - Blog"
           href="/static/opensearch.xml"/>
-    <link rel="shortcut icon" href="https://cdn.becauseofprog.fr/v2/sites/becauseofprog.fr/assets/logos/favicon.ico">
+    <link rel="shortcut icon" href="/manifest/images/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600&family=Merriweather:ital,wght@0,300;0,700;1,400&display=swap" rel="stylesheet">
+
+    <link rel="apple-touch-icon" href="/manifest/images/apple/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" sizes="57x57" href="/manifest/images/apple/apple-touch-icon-57x57.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="/manifest/images/apple/apple-touch-icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="/manifest/images/apple/apple-touch-icon-76x76.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="/manifest/images/apple/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="/manifest/images/apple/apple-touch-icon-120x120.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="/manifest/images/apple/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="/manifest/images/apple/apple-touch-icon-152x152.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/manifest/images/apple/apple-touch-icon-180x180.png" />
 
     <meta name="twitter:card" content="summary">
     <meta property="og:type" content="website">
