refactor: rename 'article' to 'publication' and 'post' to 'devblog'

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="viewport" content='initial-scale=1, viewport-fit=cover'>
 
+    <meta name="description" content="Blog de programmation et actualités technologiques créé par des passionnés."/>
+    <meta name="color" content="#ff514c"/>
+    <meta name="theme-color" content="#ff514c">
+
+    <title>BecauseOfProg</title>
+
     <meta name="apple-mobile-web-app-title" content="BecauseOfProg">
     <meta name="application-name" content="BecauseOfProg">
     <meta name="msapplication-TileColor" content="#ff514c">
