--- a/index.html
+++ b/index.html
@@ -56,5 +56,7 @@
       <p>Pour toute réclamation, contactez-nous via <a href="https://twitter.com/BecauseOfProg">notre Twitter</a>.</p>
     </noscript>
     <div id="app"></div>
+
+    <script type="module" src="/src/main.js"></script> 
   </body>
 </html>
