Changement URL assets

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     <meta name="twitter:card" content="summary">
     <meta property="og:type" content="website">
 
-    <link rel="stylesheet" href="https://cdn.becauseofprog.fr/v2/libs/simplemde/simplemde.min.css">
-    <script src="https://cdn.becauseofprog.fr/v2/libs/simplemde/simplemde.min.js"></script>
+    <link rel="stylesheet" href="https://becauseofprog.fr/assets/v2/libs/simplemde/simplemde.min.css">
+    <script src="https://becauseofprog.fr/assets/v2/libs/simplemde/simplemde.min.js"></script>
   </head>
   <body>
     <noscript>
